--- a/docroot/sites/all/themes/demon/assets/scss/desktop_above/scaffold/_header.scss
+++ b/docroot/sites/all/themes/demon/assets/scss/desktop_above/scaffold/_header.scss
@@ -1,7 +1,16 @@
 .region-triptych {
+
   .col-md-4 {
+    padding-left: 5px;
+    padding-right: 5px;
+  }
+
+  .first {
     padding-left: 0;
+  }
+
+  .last {
     padding-right: 0;
-    margin-bottom: 3px;
   }
 }
+
